--- a/servidor-contato/package.json
+++ b/servidor-contato/package.json
@@ -12,9 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
   }
 }
+
